chore: Update spring-chain library to version 1.0.3

--- a/index.html
+++ b/index.html
@@ -89,6 +89,6 @@
         })
       })
     </script>
-    <script src="./lib/main.js" type="module"></script>
+    <script src="./node_modules/spring-chain/dist/springChain.umd.js"></script>
   </body>
 </html>
